cluster/k3d-local/apps/ingress-controler/ingress-controler-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-controler
  labels:
    name: ingress-controler
