cluster/k3d-local/apps/ingress-controler/ingress-controler.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controler
  namespace: ingress-controler
spec:
  rules:
  - http:
      paths:
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
